@@ -18,6 +18,7 @@ before_install:
 
 install:
     - wget https://www.phing.info/get/phing-latest.phar && mv phing-latest.phar phing && chmod +x phing
+    - composer install --prefer-dist --no-progress --no-suggest --no-interaction
   
 script:
     - ./phing test
